--- a/weather-app/public/manifest.json
+++ b/weather-app/public/manifest.json
@@ -6,6 +6,11 @@
       "geolocation"
     ],
     "action": {
-        "default_popup": "index.html"
+        "default_popup": "index.html",
+        "default_icon": {
+          "16": "icon.svg",
+          "32": "icon.svg",
+          "64": "icon.svg"
+        }
     }
 }
